--- a/3° Año/Autómatas y Lenguajes Formales/Unidad 3/2. Autómatas a Pila.md
+++ b/3° Año/Autómatas y Lenguajes Formales/Unidad 3/2. Autómatas a Pila.md
@@ -8,32 +8,37 @@ Se definen como una séptupla, $A = (Q,Σ,Γ,δ,q_0,A_0, F)$, en donde:
 - $A_0 \in Γ$ es el símbolo inicial de la pila. 
 - $F \subset Q$ es el conjunto de estados finales.
 
+### Representación o Configuración de Análisis
+
+En una terna de tres elementos $(q, x, z)$ donde $q$ es el estado en el que se encuentra el autómata en ese momento, $x$ son los caracteres que le falta por procesar, y $z$ es todo el contenido de la pila en ese momento específico. Por ejemplo, al momento de inicial el proceso de una cadena, la configuración del autómata puede ser la siguiente $(q_0, 1100, A)$, en el siguiente paso la configuración podría cambiar a la siguiente terna -> $(q_0, 100, 1A)$, en este paso ya se procesó el primer símbolo de la palabra y se agregó un elemento a la pila. 
+
 ### Movimientos
 
 Si $(p, x)$ $\in$ $\delta$$(q, a Z)$ con $p, q$ $\in$ $Q$, $a$ $\in$ $Σ$ $\cup$ $\{\varepsilon\}$, $Z$ $\in$ $\Gamma$, $x$ $\in$ $\Gamma^*$ entonces de la descripción instantánea $(q, ay, ZX)$ se puede pasar a la descripción instantánea de $(q,ay,ZX)├ (p,y,xX)$. Veamos un mejor ejemplo:
 
-- $(q0,1100,A)├ (q0,100,1A)├ (q0,00,11A)├ (q1,0,1A)├ (q1,ε,A)├ (q1,ε,ε)$. 
+- $(q0,1100,A)├ \ (q0,100,1A)├ \ (q0,00,11A)├ \ (q1,0,1A)├ \ (q1,ε,A)├  \ (q1,ε,ε)$. 
 
-En los movimientos se ponen todos los estados por los que paso el autómata para poder procesar la cadena.
+Funcionaria algo así como una foto del momento exacto en la que se encuentra el autómata en cada uno de los pasos que realiza en el procesamiento de una palabra.
 
 ### Sucesión Movimientos
 
 Para representar que se puede alcanzar la descripción instantánea $d_2$ a partir de $d_1$: $d_1 ├* d_2$, para verlo de mejor manera tomemos el siguiente ejemplo → $(q0 ,1100, A)├ * (q1 ,ε, ε )$. En la sucesión de movimientos se pone la entrada, y el estado final que se alcanza una vez se consume toda la cadena
 
->[!caution] Aceptación de una Cadena en los Autómatas a Pila
+>[!caution] Aceptación de una Cadena por Parte de un Autómata a Pila
 >En los autómatas a pila existen dos formas de que una cadena de caracteres sea aceptada, que el autómata termine en un estado final, que el autómata termine con la pila vacía o que se cumplan ambas cosas a la vez.
 
-## Propiedades de los LIC
+## Propiedades de los Lenguajes Independientes del Contexto
 
 - Sean $L_1$ y $L_2$, generados por las gramáticas de tipo 2, $G_1=(Σ_N1,Σ_T1,P_1,S_1)$ y $G2=(Σ_N2, Σ_T2,P_2,S_2)$, puede obtenerse el $L_3 = L_1 \cup L_2$ de la siguiente manera
 	1. Incorporar un nuevo axioma y añadir dos reglas de derivación, una para cada axioma:
-		- $S::=S_1$
+		- $S::=S_1$.
 		- $S::= S_2$.
 	1. Se obtiene así la gramática unión:
-		- $G=(Σ_{N1} \cup Σ_{N2} \cup {S}, Σ_{T1} \cup Σ_{T2},P1 \cup P2 \cup \{S::=S_1 ,S::=S_2\}, S)$
+		- $G=(Σ_{N1} \cup Σ_{N2} \cup {S}, Σ_{T1} \cup Σ_{T2},P1 \cup P2 \cup \{S::=S_1 ,S::=S_2\}, S)$.
 - Sean $L_1$ y $L_2$, generados por las gramáticas de tipo 2, $G_1=(Σ_N1,Σ_T1,P_1,S_1)$ y $G2=(Σ_N2, Σ_T2,P_2,S_2)$ puede obtenerse el $L_3 = L_1• L_2:$, de la siguiente manera
 	1. Incorporar un nuevo axioma y añadir una regla de derivación desde el axioma a la concatenación de los axiomas existentes, es decir
 		- $S::=S_1S_2$.
 	2. Se obtiene así la gramática unión:
 		- $G=(Σ_{N1} \cup Σ_{N2} \cup {S}, Σ_{T1} \cup Σ_{T2},P1 \cup P2 \cup \{S::=S_1S_2\}, S)$
-
+- La ***estrella de Kleene*** de Lenguaje Independiente del Contexto es un Lenguaje Independiente del Contexto.
+- La ***intersección*** de Lenguaje Independiente del Contexto puede no ser Lenguaje Independiente del Contexto.
