Se termino de agregar toda la información a las unidades 3 y 4 de autómatas

--- a/3° Año/Autómatas y Lenguajes Formales/Unidad 1/1. Lenguajes, Gramática y Autómatas.md
+++ b/3° Año/Autómatas y Lenguajes Formales/Unidad 1/1. Lenguajes, Gramática y Autómatas.md
@@ -20,15 +20,15 @@ Los ***símbolos*** son entidades atómicas e indivisibles, es decir, son lo mas
 
 - **Concatenación** -> Sean *x, y* ∈ Σ*. Donde |x|=i, |y|=j. Se llama concatenación de la palabra x e y a la palabra z= x * y o bien z = xy.
 
-<span class=centerImg>![[strings-property1.png]]</span>
+![[strings-property1.png]]
 
 - **Potencia** -> Se denomina ***potencia i-énesima*** de una palabra a la operación que consiste en concatenarla consigo misma ***i*** veces.
 
-<span class="centerImg">![[strings-property2.png]]</span>
+![[strings-property2.png]]
 
 - **Relfexión, cadena refleja o inversa** -> sea x = A1, A2 .... An. Entonses su reflexión sera Xr = An ... A2, A1.
 
-<span class="centerImg">![[strings-property3.png]]</span>
+![[strings-property3.png]]
 
 >[!info] Potencia de un Alfabeto
 > - Si **Σ** es un alfabeto, **Σk** es el conjunto de las cadenas de longitud k, tales que cada uno de los símbolos de las mismas pertenece a **Σ**.
