--- a/3° Año/Autómatas y Lenguajes Formales/Unidad 3/2. Autómatas a Pila.md
+++ b/3° Año/Autómatas y Lenguajes Formales/Unidad 3/2. Autómatas a Pila.md
@@ -8,37 +8,42 @@ Se definen como una séptupla, $A = (Q,Σ,Γ,δ,q_0,A_0, F)$, en donde:
 - $A_0 \in Γ$ es el símbolo inicial de la pila. 
 - $F \subset Q$ es el conjunto de estados finales.
 
-### Representación o Configuración de Análisis
+## Representación o Configuración de Análisis
 
-En una terna de tres elementos $(q, x, z)$ donde $q$ es el estado en el que se encuentra el autómata en ese momento, $x$ son los caracteres que le falta por procesar, y $z$ es todo el contenido de la pila en ese momento específico. Por ejemplo, al momento de inicial el proceso de una cadena, la configuración del autómata puede ser la siguiente $(q_0, 1100, A)$, en el siguiente paso la configuración podría cambiar a la siguiente terna -> $(q_0, 100, 1A)$, en este paso ya se procesó el primer símbolo de la palabra y se agregó un elemento a la pila. 
+En una terna de tres elementos $(q, x, z)$ donde:
+- $q$ es el estado en el que se encuentra el autómata en ese momento.
+- $x$ son los caracteres que le falta por procesar.
+- $z$ es todo el contenido de la pila en ese momento específico.
 
-### Movimientos
+Al momento de inicial el proceso de una cadena, la configuración del autómata puede ser la siguiente $(q_0, 1100, A)$, en el siguiente paso la configuración podría cambiar a la siguiente terna -> $(q_0, 100, 1A)$, en este paso ya se procesó el primer símbolo de la palabra y se agregó un elemento a la pila. 
 
-Si $(p, x)$ $\in$ $\delta$$(q, a Z)$ con $p, q$ $\in$ $Q$, $a$ $\in$ $Σ$ $\cup$ $\{\varepsilon\}$, $Z$ $\in$ $\Gamma$, $x$ $\in$ $\Gamma^*$ entonces de la descripción instantánea $(q, ay, ZX)$ se puede pasar a la descripción instantánea de $(q,ay,ZX)├ (p,y,xX)$. Veamos un mejor ejemplo:
+>[!tldr] Movimientos de los Autómatas a Pila
+>- **Movimiento**: Si $(p, x)$ $\in$ $\delta$$(q, a Z)$ con $p, q$ $\in$ $Q$, $a$ $\in$ $Σ$ $\cup$ $\{\varepsilon\}$, $Z$ $\in$ $\Gamma$, $x$ $\in$ $\Gamma^*$ entonces de la descripción instantánea $(q, ay, ZX)$ se puede pasar a la descripción instantánea $(p,y,xX)$, representandose mediante la siguiente notación: $(q,ay,ZX)├ \ (p,y,xX)$. Para poder ver un ejemplo más amplio, veamos como un autómata a pila $P$, que posee una determinada configuración dada, procesa la palabra $1100$:
+>	 - $(q0,1100,A)├ \ (q0,100,1A)├ \ (q0,00,11A)├ \ (q1,0,1A)├ \ (q1,ε,A)├  \ (q1,ε,ε)$.
+>
+> - **Sucesión Movimientos**: Para representar que se puede alcanzar la ***descripción instantánea*** $d_2$ a partir de $d_1$ utilizamos la siguiente notación: $d_1 ├* d_2$, para verlo de una manera más clara como en realidad se utiliza, procesaremos la misma palabra que se da en el ejemplo de los movimientos. En este caso, utilizando la sucesión de movimientos nos quedaría: $(q0 ,1100, A)├ * (q1 ,ε, ε )$. En la sucesión de movimientos se pone la entrada, y el estado final que se alcanza una vez se consume toda la cadena
 
-- $(q0,1100,A)├ \ (q0,100,1A)├ \ (q0,00,11A)├ \ (q1,0,1A)├ \ (q1,ε,A)├  \ (q1,ε,ε)$. 
+## Aceptación de una Cadena por Parte de un Autómata a Pila
 
-Funcionaria algo así como una foto del momento exacto en la que se encuentra el autómata en cada uno de los pasos que realiza en el procesamiento de una palabra.
+En los autómatas a pila existen tres formas de que una cadena de caracteres sea aceptada.
+1. El autómata consume toda la palabra de entrada, se encuentra en un estado final y su pila este vacía, entonces la palabra es aceptada.
+2. El autómata consumió toda la palabra de entrada y su pila este vacía, entonces esa palabra es aceptada.
+3. El autómata consume toda la palabra de entrada y se encuentra en un estado final, entonces la palabra es aceptada.
 
-### Sucesión Movimientos
-
-Para representar que se puede alcanzar la descripción instantánea $d_2$ a partir de $d_1$: $d_1 ├* d_2$, para verlo de mejor manera tomemos el siguiente ejemplo → $(q0 ,1100, A)├ * (q1 ,ε, ε )$. En la sucesión de movimientos se pone la entrada, y el estado final que se alcanza una vez se consume toda la cadena
-
->[!caution] Aceptación de una Cadena por Parte de un Autómata a Pila
->En los autómatas a pila existen dos formas de que una cadena de caracteres sea aceptada, que el autómata termine en un estado final, que el autómata termine con la pila vacía o que se cumplan ambas cosas a la vez.
+La manera en la que cada autómata a pila acepta una palabra o no, va a estar aclarada en la especificación del mismo.
 
 ## Propiedades de los Lenguajes Independientes del Contexto
 
-- Sean $L_1$ y $L_2$, generados por las gramáticas de tipo 2, $G_1=(Σ_N1,Σ_T1,P_1,S_1)$ y $G2=(Σ_N2, Σ_T2,P_2,S_2)$, puede obtenerse el $L_3 = L_1 \cup L_2$ de la siguiente manera
+- Sean $L_1$ y $L_2$, generados por las gramáticas de tipo 2, $G_1=(Σ_{N1},Σ_{T1},P_1,S_1)$ y $G2=(Σ_{N2}, Σ_{T2},P_2,S_2)$, puede obtenerse el $L_3 = L_1 \cup L_2$ de la siguiente manera
 	1. Incorporar un nuevo axioma y añadir dos reglas de derivación, una para cada axioma:
 		- $S::=S_1$.
 		- $S::= S_2$.
 	1. Se obtiene así la gramática unión:
 		- $G=(Σ_{N1} \cup Σ_{N2} \cup {S}, Σ_{T1} \cup Σ_{T2},P1 \cup P2 \cup \{S::=S_1 ,S::=S_2\}, S)$.
-- Sean $L_1$ y $L_2$, generados por las gramáticas de tipo 2, $G_1=(Σ_N1,Σ_T1,P_1,S_1)$ y $G2=(Σ_N2, Σ_T2,P_2,S_2)$ puede obtenerse el $L_3 = L_1• L_2:$, de la siguiente manera
+- Sean $L_1$ y $L_2$, generados por las gramáticas de tipo 2, $G_1=(Σ_{N1},Σ_{T1},P_1,S_1)$ y $G2=(Σ_{N2}, Σ_{T2},P_2,S_2)$ puede obtenerse el $L_3 = L_1• L_2:$, de la siguiente manera
 	1. Incorporar un nuevo axioma y añadir una regla de derivación desde el axioma a la concatenación de los axiomas existentes, es decir
 		- $S::=S_1S_2$.
 	2. Se obtiene así la gramática unión:
 		- $G=(Σ_{N1} \cup Σ_{N2} \cup {S}, Σ_{T1} \cup Σ_{T2},P1 \cup P2 \cup \{S::=S_1S_2\}, S)$
-- La ***estrella de Kleene*** de Lenguaje Independiente del Contexto es un Lenguaje Independiente del Contexto.
-- La ***intersección*** de Lenguaje Independiente del Contexto puede no ser Lenguaje Independiente del Contexto.
+- La ***estrella de Kleene*** de un lenguaje independiente del contexto, $L$ entonces $L^*$ es también un lenguaje independiente del contexto.
+- La ***intersección*** de dos lenguajes Independiente del contexto $L_1 \cap L_2$ puede no ser un lenguaje independiente del contexto.
