--- a/3° Año/Autómatas y Lenguajes Formales/Unidad 4/1. Máquina de Turing.md
+++ b/3° Año/Autómatas y Lenguajes Formales/Unidad 4/1. Máquina de Turing.md
@@ -5,15 +5,18 @@ Hacia fines de siglo XIX, el matemático D. Hilbert postuló la necesidad de est
 3. *Entscheidungsproblem* o problema de la decisión: ¿existen métodos para responder ala primera pregunta? ¿Siempre existen métodos para demostrar cualquier cosa?
 
 En un nuevo congreso en 1928, el matemático checo Kurt Gödel demostró que algunos de los problemas planteados por Hilbert tenían respuesta negativa, demostró que toda teoría formal con suficiente poder expresivo como para reproducir la aritmética tenía teoremas no demostrables, o bien era inconsistente. Este hecho tuvo consecuencias tremendas sobre las matemáticas.
-Pero el “problema de la decisión” seguía pendiente, y atrajo el interés del estudiante británico ***Alan Turing*** y el estadounidense ***Alonzo Church***. Tanto Turing como Church mostraron, separadamente, que existen problemas sobre los que nunca podrá establecerse un método para resolverlos. Indirectamente, el acercamiento de Turing involucraba cómo debía definirse la noción de método o ***procedimiento efectivo***, que llegó a nuestros días como algoritmo. Esto resultó en un modelo formal, llamado ***Máquina de Turing***, que establece qué problemas puede resolver una computadora actual.
+Pero el “problema de la decisión” seguía pendiente, y atrajo el interés del estudiante británico ***Alan Turing*** y el estadounidense ***Alonzo Church***. Tanto Turing como Church mostraron, separadamente, que existen problemas sobre los que nunca podrá establecerse un método para resolverlos. Indirectamente, el acercamiento de Turing involucraba cómo debía definirse la noción de método o ***procedimiento efectivo***, que llegó a nuestros días como algoritmo. Esto resultó en un modelo formal, llamado ***Máquina de Turing***, que establece qué problemas puede resolver una computadora actual. No olvidemos que el concepto de Máquina de Turing es un formalismo matemático que surgio como herramienta abstracta para estudiar la teoría de la computabilidad.
 
+>[!info] Máquinas de Turing y Computación
+>Debido a que, a nivel abstracto, las Máquinas de Turing reciben una entrada, y generan una salida al finalizar su ejecución, se podría establecer una analogía entre los *MT* y los programas.
+>Esta analogía ha generado numerosos estudios teóricos sobre la computación, permitiendo asignar la etiqueta de ***computable*** a cualquier proceso que pueda representarse mediante una máquina de Turing. Sin mencionar que se puede definir una máquina universal de Turing, la cual es capas de simular/ejecutar cualquier *MT*, lo que nos permitiría establecer otra analogía entere los *MUT* y las computadoras. 
 
 ## Procedimiento Efectivo o Algoritmo
 
 Conjunto de reglas destinadas a resolver un problema, escritas es un determinado lenguaje, que son interpretables y ejecutables. La notación de los procedimientos efectivos se puede realizar de varias maneras, entre ellas:
 
 - Máquina de Turing.
-- Funciones recursivas parciales (utilizadas en el cálculo lambda creado por Church).
+- Funciones recursivas parciales (concepto que surge de la mano de Church que utilizó el cálculo lambda para llegar a la misma conclusión que Turing).
 - Gramáticas estructuradas por frases.
 - Redes de Petri.
 
@@ -27,7 +30,7 @@ Conjunto de reglas destinadas a resolver un problema, escritas es un determinado
 
 ## Máquina de Turing
 
-En 1936 Turing definió una máquina abstracta, conocida hoy como Máquina de Turing. Su idea central era abstraer el conjunto de operaciones que realiza una persona cuando realiza un cálculo. Este gran aporte logró establecer que una máquina de Turing es capaz de ejecutar cualquier procedimiento efectivo.
+En 1936 Turing definió una máquina abstracta, conocida hoy como Máquina de Turing. Su idea central era abstraer el conjunto de operaciones que realiza una persona cuando realiza un cálculo. Este gran aporte logró establecer que una máquina de Turing es capaz de ejecutar cualquier ***procedimiento efectivo***.
 Se puede definir a la Máquina de Turing como una séptupla: $MT = (Q, Σ, Γ, δ, q_0 , □, F)$, en donde:
 
 - $Q$ es un conjunto finito no vacío de estados.
@@ -60,19 +63,19 @@ Significa que cuando se está en el estado $p$, se lee el símbolo $a$ de la cin
 
 ### Representación o Configuración Inicial
 
-Se representan mediante una terna, en donde:
+Se representan mediante una terna $\{ v, q, w \ | \ v \in Γ^*, w \in Γ^*, q \in Q\}$, en donde:
 - $q$ es su estado actual.
 - El cabezal se halla situado sobre el primer símbolo de la cadena $w$.
-- La parte izquierda de la cinta contiene la cadena $v$.
-- Para simplificar, cada configuración $(v, q, w)$ se representará mediante la cadena de caracteres formada por la concatenación $(v.q.w)$, por ejemplo $01q_011$, en el cual 01 es la cadena $v$, $q_0$ es el lugar en el que se encuentra el cabezal y 11 es la parte de la cadena $w$ que falta ser analizada.
+- La parte izquierda de la cinta contiene la cadena $v$, la cual va a contener la cadena ya procesada por el autómata.
 
-### Movimiento
+Para simplificar, cada configuración $(v, q, w)$ se representará mediante la cadena de caracteres formada por la concatenación $(v.q.w)$, por ejemplo $01q11$, en el cual representaría la siguiente situación.
 
-Es el paso, mediante una transición, de una configuración a otra. Se representa con el símbolo ├. Por ejemplo $000q_011 ├ \  0000q_01$.
+![[ALF-init-conf.png]]
 
-### Secesión de Movimientos
-
-Para representar que se puede pasar de la configuración $(v_1,q_1,w_1)$ a la configuración $(v_2,q_2,w_2)$, se representaría de la siguiente manera $(v_1,q_1,w_1) ├ \  (v_2,q_2,w_2)$, o en un ejemplo más significativo tenemos la siguiente sucesión $q_010011 ├* \  00000q_1$.
+>[!tldr] Movimientos de una Máquina de Turing
+>
+>Un ***movimiento*** es el paso, mediante una transición, de una configuración de análisis a otra. Se representa con el símbolo ├. Por ejemplo $000q_011 ├ \  0000q_01$.
+>Para representar que se puede pasar de la configuración $(v_1,q_1,w_1)$ a la configuración $(v_2,q_2,w_2)$, se representaría de la siguiente manera $(v_1,q_1,w_1) ├* \  (v_2,q_2,w_2)$, o en un ejemplo más significativo tenemos la siguiente sucesión $q_010011 ├* \  00000q_1$, donde se pasa de la entrada inicial que recibe la *MT* a su resultado final.
 
 ## Palabras Aceptadas por una Máquina de Turing
 
@@ -80,13 +83,13 @@ Una Máquina de Turing reconoce un lenguaje $L$ si para cualquier cadena de entr
 
 ### Restricciones y Extensiones de la Máquina de Turing
 
-Restricciones a la Máquina de Turing
+**Restricciones a la Máquina de Turing**
 - Máquina de Turing con cinta limitada en un solo sentido.
 - Máquina de Turing con capacidad de acción restringida.
 - Máquina de Turing con alfabeto binario.
-Extensiones a la Máquina de Turing
+**Extensiones a la Máquina de Turing**
 - Máquina de Turing con $n$ cintas.
 - Máquina de Turing no deterministas.
 
 >[!important] Autómatas Lineales Acotados
->Un autómata linealmente acotado es una máquina de Turing no determinista que posee cinta finita y acotada. Este tipo de autómatas reconoce lenguajes dependientes del contexto, es decir, aquellos descriptos por las gramáticas de tipo 1 en la jerarquía de Chomsky.
+>Un autómata linealmente acotado es una máquina de Turing no determinista que posee cinta finita, acotada tanto por la izquierda como por la derecha. Este tipo de autómatas reconoce lenguajes dependientes del contexto, es decir, aquellos descritos por las gramáticas de tipo 1 en la jerarquía de Chomsky.
