--- a/3° Año/Autómatas y Lenguajes Formales/Unidad 4/2. Máquina Universal de Turing y Computabilidad.md
+++ b/3° Año/Autómatas y Lenguajes Formales/Unidad 4/2. Máquina Universal de Turing y Computabilidad.md
@@ -1,7 +1,8 @@
 
 ## Máquina Universal de Turing
 
-Es posible construir una Máquina de Turing que “ejecute” otra Máquina de Turing. Esto es lo que se denomina Máquina de Propósito General o Máquina Universal de Turing
+Máquina de Propósito General o Máquina Universal de Turing, son máquinas que reciben en la cinta una descripción de otra máquina de Turing $M$, y el contenido de la cinta $\alpha$ que va a procesar esa máquina. Obteniendo como resultado de la ejecución el mismo resultado que la $M$ al procesar $\alpha$.
+Recibe el nombre de Máquina Universal de Turing debido a que es capas de simular el comportamiento de otras máquinas de Turing. Convirtiéndose así en un dispositivo análogo a una computadora, siendo capaz de realizar cualquier cómputo.
 
 ![[ALF-MUT.png]]
 
