--- a/3° Año/Lenguajes de Programación/Unidad 1/1. Evolución de los Lenguajes de Programación.md
+++ b/3° Año/Lenguajes de Programación/Unidad 1/1. Evolución de los Lenguajes de Programación.md
@@ -6,6 +6,13 @@
 
 Estos mismos lenguajes se pueden clasificar según su nivel, su jerarquia, la forma de programar con estos mismos y la manera en la que se realizan las instrucciones.
 
+| Clasificación         |                                                                                              |
+|-----------------------|----------------------------------------------------------------------------------------------|
+| Nivel                 | Bajo Nivel, Alto Nivel                                                                       |
+| Jerarquia             | 1° Generación, 2° Generación, 3° Generación, 4° Generación, 5° Generación                    |
+| Forma de Programación | Imperativo, Declarativo                                                                      |
+| Instrucciones         | Imperativos, Orientados a Objetos, Cocurrentes Paralelos y Distribuidos, Lógicos, Funcionales |
+
 ---
 
 ### Los Lenguajes de Programación en el Proceso de Desarrollo de Software.
@@ -32,7 +39,7 @@ No debemos olvidarnos de que los lenguajes de programación están limitados por
 
 Siguiendo con el tema de la abstracción, los lenguajes nos brindas distintos niveles de a acuerdo a dos tópicos: ***Abstracción de datos y Abstracción de Control***.
 
-<span class="centerImg"> ![[LP-abstraccion.png]] </span>
+![[LP-abstraccion.png]]
 
 ### Perspectiva Histórica
 
