--- a/3° Año/Autómatas y Lenguajes Formales/Unidad 3/1. Gramaticas Limpias y Bien Formadas.md
+++ b/3° Año/Autómatas y Lenguajes Formales/Unidad 3/1. Gramaticas Limpias y Bien Formadas.md
@@ -46,11 +46,11 @@ Las gramáticas de tipo 2, se pueden transformar en gramáticas equivalentes en 
 
 - **Forma normal de Chomsky (FNC)**:
 > $$P=\{(A::=BC) ó (A::=a) ó (S::=\lambda) / A,B,C \in Σ_N, a \in Σ_T\}$$
-> La forma normal de Chomsky permite la creación de árboles binarios
+> La forma normal de Chomsky permite la creación de árboles de derivación binarios
 
 - **Forma normal de Greibach (FNG)**:
 > $$P=\{(A::=aX) ó (S::=\lambda) / A \in Σ_N, X \in Σ^*_N, a \in Σ_T\}$$
-> La forma normal de Greibach nos permite eliminar la recursividad por izquierda, además de permitirnos saber la cantidad de pasos que vamos a necesitar para formar una determianda palabra.
+> La forma normal de Greibach nos permite eliminar la recursividad por izquierda, además de resultar muy útiles a la hora de construir un autómata a pila equivalente a una gramática de tipo 2. Nos permite saber la cantidad de pasos que vamos a necesitar para formar una determinada palabra.
 
 >[!note] Recomendación
 >Cuando se quiere transformar una gramática a la forma normal de Greibach, conviene primero convertirla a la forma normal de Chomsky y luego comenzar el proceso para que sea de la forma normal de Greibach. Haciendo esto nos ahorramos algunos pasos adicionales o muy tediosos.
