Correcciones v7 y Agregado todo lo que faltaba de SO

--- a/3° Año/Autómatas y Lenguajes Formales/Unidad 1/1. Lenguajes, Gramática y Autómatas.md
+++ b/3° Año/Autómatas y Lenguajes Formales/Unidad 1/1. Lenguajes, Gramática y Autómatas.md
@@ -2,7 +2,7 @@
 
 ## Lenguajes de Programación
 
-Los lenguajes de programación al ser considerados ***formales o artificiales*** son creados en primera instancia para cumplir con un objetivo específico y concreto, ademas del de servir para comunicarse con el hardware de manera efectiva.
+Los lenguajes de programación, al ser considerados ***formales o artificiales,*** son creados en primera instancia para cumplir con un objetivo específico y concreto, además del de servir para comunicarse con el hardware de manera efectiva.
 
 >[!info] Definiciones Básicas
 > - Símbolos
@@ -10,11 +10,11 @@ Los lenguajes de programación al ser considerados ***formales o artificiales***
 > - Cadenas
 > - Lengiajes (de forma mas conceptual)
 
-Los ***símbolos*** son entidades atómicas e indivisibles, es decir, son lo mas pequeño conceptualemente a su vez son la representación indistinguible de **información**. Por otra parte los ***Alfabetos*** son un conjunto finito y no vacio de simbolos que generalmente de forma conceptual se representan, usualmente, con la letra griega **Σ**.
-***Las palabras o cadenas de caracteres*** son secuencias finitas de símbolos seleccionados de un alfabeto, existe un caso partucular de las cadenas que es la ***cadena vacía***, que es aquella que no es compuesta por ningun simbolo; que por lo general el representada con las letras gruegas **Ɛ** ó **𝝀**. Y la ***longitud de una palabra |w|*** es la cantidad de simbolos que contiene una palabra incluyendo las repreticiones.
+Los ***símbolos*** son entidades atómicas e indivisibles, es decir, son lo más pequeño conceptualmente, a su vez son la representación indistinguible de **información**. Por otra parte, los ***Alfabetos*** son un conjunto finito y no vacío de símbolos que generalmente de forma conceptual se representan, usualmente, con la letra griega **Σ**.
+***Las palabras o cadenas de caracteres*** son secuencias finitas de símbolos seleccionados de un alfabeto, existe un caso particular de las cadenas que es la ***cadena vacía***, que es aquella que no es compuesta por ningún símbolo; que por lo general es representada con las letras griegas **Ɛ** ó **𝝀**. Y la ***longitud de una palabra |w|*** es la cantidad de símbolos que contiene una palabra, incluyendo las repeticiones.
 
 >[!note] Nota
->La logitud de caracter de la cadena vacía (|Ɛ|) es igual a cero, siempre y cuando los simbolos que se usa para representarlos no esten incluidos en el alfabeto dado.
+>La longitud de caracter de la cadena vacía (|Ɛ|) es igual a cero, siempre y cuando los símbolos que se usa para representarlos no estén incluidos en el alfabeto dado.
 
 ###### Operaciones sobre cadenas
 
@@ -26,7 +26,7 @@ Los ***símbolos*** son entidades atómicas e indivisibles, es decir, son lo mas
 
 ![[strings-property2.png]]
 
-- **Relfexión, cadena refleja o inversa** -> sea x = A1, A2 .... An. Entonses su reflexión sera Xr = An ... A2, A1.
+- **Relfexión, cadena refleja o inversa** -> sea $x = A_1, A_2 .... A_n$. Entonces su reflexión será $Xr = A_n ... A_2, A_1$.
 
 ![[strings-property3.png]]
 
@@ -34,47 +34,46 @@ Los ***símbolos*** son entidades atómicas e indivisibles, es decir, son lo mas
 > - Si **Σ** es un alfabeto, **Σk** es el conjunto de las cadenas de longitud k, tales que cada uno de los símbolos de las mismas pertenece a **Σ**.
 > - El conjunto de todas las palabras que se pueden formar con los símbolos de un alfabeto **Σ** se llama ***universo del discurso o lenguaje universal*** de **Σ** y se representa con Σ*.
 >
-> Para poder ver esto de forma mas practica digamos que contamos con el siguiente alfabeto Σ = {0,1}; entonses Σ0 = {𝝀} o un conjunto vacio, Σ1 = {0,1}; Σ2 = {00,01,10,11} y Σ3 = {000,001,010,011,100,101,110,111} y asi sucesibamente
+> Para poder ver esto de forma más práctica digamos que contamos con el siguiente alfabeto Σ = {0,1}; entonces Σ0 = {𝝀} o un conjunto vacío, Σ1 = {0,1}; Σ2 = {00,01,10,11} y Σ3 = {000,001,010,011,100,101,110,111} y así sucesivamente
 
 >[!info] Lenguajes Definición Conceptual
 > - Se llama ***Lenguaje L*** definido sobre el alfabeto **Σ** a cualquier subconjunto de **Σ*.**
 > -  Especificación:
-> 	- *Por comprensión* -> L = { w ϵ Σ* / w cumple la propiedad P} es decir que dicho lenguiaje cumple una determinada porpiedad que lo define.
-> 	- *Por extrensíon* -> Se enumeran todos sus componentes.
+> 	- *Por comprensión* -> L = { w ϵ Σ* / w cumple la propiedad P} es decir que dicho lenguaje cumple una determinada propiedad que lo define.
+> 	- *Por extensíon* -> Se enumeran todos sus componentes.
 > 
 
 ##### Operaciones sobre lenguajes
 
 - **Concatenación** -> Sean dos lenguajes L1 L2 , ⊂ Σ* -> L1 * L2 = { x * y / x ∈ L1 ∧ y ∈ L2 }
 
-<span class="centerImg"> ![[lenguage-property1 2.png]] </span>
+ ![[lenguage-property1 2.png]]
 
 - **Unión** -> Sean dos lenguajes L1, L2 ⊂ Σ* -> L1 ∪ L2 = { x / x ∈ L1 ∨ x ∈ L2 }
 
-<span class="centerImg"> ![[lenguage-property2.png]] </span>
+ ![[lenguage-property2.png]]
 
 - **Intersección** -> Sean dos lenguajes L1, L2 ⊂ Σ* -> L1 ∩ L2 = { x / x ∈ L1 ∧ x ∈ L2 }
 
-<span class="centerImg"> ![[lenguage-property3.png]] </span>
+ ![[lenguage-property3.png]]
 
 - **Diferencia** -> Sean dos lenguajes L1, L2 ⊂ Σ* -> L1 - L2 = { x / x ∈ L1 ∧ x  ∉ L2 }
 
-<span class="centerImg"> ![[lenguaje-property4.png]] </span>
+![[lenguaje-property4.png]]
 
-- **Complementación** -> Se denomina complemento de L, al lenguaje que contiene todas laspalabras sobre el alfabeto Σ y que no pertenecen a L. -L = { x / x ∈ Σ* ∧ x  ∉ L }
+- **Complementación** -> Se denomina complemento de L, al lenguaje que contiene todas las palabras sobre el alfabeto Σ y que no pertenecen a L. -L = { x / x ∈ Σ* ∧ x  ∉ L }
+ ![[lenguaje-property5.png]]
 
-<span class="centerImg"> ![[lenguaje-property5.png]] </span>
-
-- **Lenguaje Reflejo** -> Sea L un lenguaje, entonses Lr = { x / x ∈ L }
+- **Lenguaje Reflejo** -> Sea L un lenguaje, entonces Lr = { x / x ∈ L }
 - **Potencia** -> Se denomina ***potencia i-énecima*** de un lenguaje L a la operación que consiste en concatenar consigo mismo ***i*** veces. Li = L0 x L1 x  L2 ... x Li
 - **Clausura o Cierre positivo** -> son las infinitas concatenaciones de las potencias de los lenguajes empezando desde ***i = 1***.
-- **Clausura, Cierre o Cerradura Kleene** -> son las infinitas concatenaciones de las potencias de los lenguajes empezando desde ***i = 0***, osea que incluye al conjunto vacio y al conjunto L (lenguaje) y a L* (que son todas las posibles convinaciones de palabras surgidas de la concatencación de potencias).
+- **Clausura, Cierre o Cerradura Kleene** -> son las infinitas concatenaciones de las potencias de los lenguajes empezando desde ***i = 0***, o sea que incluye al conjunto vacío y al conjunto L (lenguaje) y a L* (que son todas las posibles combinaciones de palabras surgidas de la concatenación de potencias).
 
 ---
 
 ## Gramática
 
-La gramatica es un conjunto de reglas y estructuras que debe seguir un determinado lenguaje para que las sentencias que se escriban con el sean validas. Cuando hablamos de la construcción de lenguajes de programación a nivel de diseño primero se piensa en la gramatica de este mismo y luego se comienza a trabajar en el lenguaje como tal; por eso se dice que la ***gramatica es aquello que genera el lenguaje*** en si mismo.
+La gramática es un conjunto de reglas y estructuras que debe seguir un determinado lenguaje para que las sentencias que se escriban con él sean válidas. Cuando hablamos de la construcción de lenguajes de programación a nivel de diseño primero se piensa en la gramática de este mismo y luego se comienza a trabajar en el lenguaje como tal; por eso se dice que la ***gramatica es aquello que genera el lenguaje*** en sí mismo.
 
 ---
 
