--- a/3° Año/Autómatas y Lenguajes Formales/Unidad 2/4. Expreciones Regulares.md
+++ b/3° Año/Autómatas y Lenguajes Formales/Unidad 2/4. Expreciones Regulares.md
@@ -30,7 +30,7 @@ Una Expresión Regular sobre un determinado alfabeto $\Sigma$  se obtiene de apl
 
 #### Propiedades
 
-Sean L, M y N tres lenguajes se van a cumplir siempre las siguientes propiedades:
+Sean $L$, $M$ y $N$ tres lenguajes se van a cumplir siempre las siguientes propiedades:
 
 - Conmutativa con respecto a la unión -> $L + M = M + L$.
 - Asociativa con respecto a la unión y la concatenación -> $(L•M)•N = L•(M•N)$.
