--- a/3° Año/Autómatas y Lenguajes Formales/Unidad 3/1. Gramaticas Limpias y Bien Formadas.md
+++ b/3° Año/Autómatas y Lenguajes Formales/Unidad 3/1. Gramaticas Limpias y Bien Formadas.md
@@ -1,4 +1,4 @@
-La definición de una GIC proporciona escaso control sobre la clase de producciones permitidas, lo que generaría árboles de derivación extremadamente complejos o ridículamente sencillos. Por eso se deben establecer criterios para evitar obtener este tipo de árboles. Con esto se pretende obtener una forma normal para las gramáticas, el primer paso el limpiarlas.
+La definición de una ***Gramática Independiente del Contexto*** proporciona escaso control sobre la clase de producciones permitidas, lo que generaría árboles de derivación extremadamente complejos o ridículamente sencillos. Por eso se deben establecer criterios para evitar obtener este tipo de árboles. Con esto se pretende obtener una forma normal para las gramáticas, el primer paso es limpiarlas.
 
 ## Limpieza de una Gramática
 
