--- a/3° Año/Autómatas y Lenguajes Formales/Unidad 4/1. Máquina de Turing.md
+++ b/3° Año/Autómatas y Lenguajes Formales/Unidad 4/1. Máquina de Turing.md
@@ -1,10 +1,10 @@
-Hacia fines de siglo XIX, el matemático D. Hilbert postuló la necesidad de establecer bases firmes para las matemáticas. Con este fin, en un congreso realizado en 1900 se plantearon tres problemas:
+Hacia fines de siglo XIX, el matemático ***D. Hilbert*** postuló la necesidad de establecer bases firmes para las matemáticas. Con este fin, en un congreso realizado en 1900 se plantearon tres problemas:
 
 1. Dada una afirmación cualquiera de la matemática, ¿puede demostrarse siempre si ésta es verdadera o falsa? ¿Se puede demostrar cualquier cosa?
 2. La matemática, ¿es consistente? ¿Lo demostrable es consistente?
-3. *Entscheidungsproblem* o problema de la decisión: ¿existen métodos para responder ala primera pregunta? ¿Siempre existen métodos para demostrar cualquier cosa?
+3. *Entscheidungsproblem* o problema de la decisión: ¿existen métodos para responder a la primera pregunta? ¿Siempre existen métodos para demostrar cualquier cosa?
 
-En un nuevo congreso en 1928, el matemático checo Kurt Gödel demostró que algunos de los problemas planteados por Hilbert tenían respuesta negativa, demostró que toda teoría formal con suficiente poder expresivo como para reproducir la aritmética tenía teoremas no demostrables, o bien era inconsistente. Este hecho tuvo consecuencias tremendas sobre las matemáticas.
+En un nuevo congreso en 1928, el matemático checo ***Kurt Gödel*** demostró que algunos de los problemas planteados por Hilbert tenían respuesta negativa, demostró que toda teoría formal con suficiente poder expresivo como para reproducir la aritmética tenía teoremas no demostrables, o bien era inconsistente. Este hecho tuvo consecuencias tremendas sobre las matemáticas.
 Pero el “problema de la decisión” seguía pendiente, y atrajo el interés del estudiante británico ***Alan Turing*** y el estadounidense ***Alonzo Church***. Tanto Turing como Church mostraron, separadamente, que existen problemas sobre los que nunca podrá establecerse un método para resolverlos. Indirectamente, el acercamiento de Turing involucraba cómo debía definirse la noción de método o ***procedimiento efectivo***, que llegó a nuestros días como algoritmo. Esto resultó en un modelo formal, llamado ***Máquina de Turing***, que establece qué problemas puede resolver una computadora actual. No olvidemos que el concepto de Máquina de Turing es un formalismo matemático que surgio como herramienta abstracta para estudiar la teoría de la computabilidad.
 
 >[!info] Máquinas de Turing y Computación
@@ -87,6 +87,7 @@ Una Máquina de Turing reconoce un lenguaje $L$ si para cualquier cadena de entr
 - Máquina de Turing con cinta limitada en un solo sentido.
 - Máquina de Turing con capacidad de acción restringida.
 - Máquina de Turing con alfabeto binario.
+
 **Extensiones a la Máquina de Turing**
 - Máquina de Turing con $n$ cintas.
 - Máquina de Turing no deterministas.
