--- a/3° Año/Sistemas Operativos/Unidad 2/2. Planeamiento de Procesos.md
+++ b/3° Año/Sistemas Operativos/Unidad 2/2. Planeamiento de Procesos.md
@@ -72,3 +72,18 @@ Para la planificación existen módulos del Sistema Operativo que eligen un proc
 	- Puede ser injusta, ya que un proceso corto puede sacar a uno largo que esté ejecutándose y tal vez terminándose.
 
 ![[SO-SRTF.png]]
+
+- **Round Robin**: Consiste en conceder a cada proceso en ejecución un determinado período de tiempo ***q(quantum)***, luego del cual si el proceso no terminó se lo devuelve al final de la cola de procesos listos.
+	- Si el So posee cambios de contextos eficientes, este método presenta baja sobrecarga.
+	- Es más utilizada en SO de tiempo compartido.
+	- El tamaño del quántum dependerá del tipo de sistema, las cargas que soporte el mismo y el número de procesos en el sistema.
+
+![[SO-RR.png]]
+
+- **Planificación por Prioridades**: Se asigna el procesador al proceso con mayor prioridad. El principal problema de esta política es la postergación indefinida de los procesos con baja prioridad, para solucionar esto existe el ***envejecimiento de las prioridades*** que aumenta gradualmente las prioridades de los procesos listos y ante iguales prioridades atiende al proceso más antiguo. Este método se puede emplear de dos formas:
+	- Sin desalojo.
+	- Con desalojo
+
+![[SO-PSD.png]]
+
+![[SO-PCD.png]]
